<resources>
    <string name="app_name">微流</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="warn">预警</string>
    <string name="work">工作</string>
    <string name="discover">发现</string>
    <string name="resource">资源</string>
    <string name="mine">我的</string>
    <string name="username_default">biloba</string>
    <string name="my_work">我的工作</string>
    <string name="my_report">我的报告</string>
    <string name="my_award">我的奖励</string>
    <string name="message">消息通知</string>
    <string name="service">服务中心</string>
    <string name="feedback">意见反馈</string>
    <string name="score">给我们好评</string>
    <string name="check_update">检查更新</string>
    <string name="share_firend">推荐给朋友</string>
    <string name="birthday">生日</string>
    <string name="tel">手机号</string>
    <string name="password">密码</string>
    <string name="sex">性别</string>
    <string name="nick">昵称</string>
    <string name="head">头像</string>
    <string name="edit_personal_info">编辑个人信息</string>
    <string name="error">出错</string>
    <string name="avater_path">avater_path</string>
    <string name="load_error">加载数据出错</string>
    <string name="show_in_map">在地图中显示</string>
    <string name="monitoring_data">监测数据</string>
    <string name="device_map">监测点</string>
    <string name="about_app">关于应用</string>
    <string name="no_message">无消息</string>
    <string name="checked_work">已审核工作</string>
    <string name="uncheck_work">未审核工作</string>
    <string name="uncheck">未审核</string>
    <string name="go">前往</string>
    <string name="op_error">操作失败</string>
    <string name="accepted">已通过</string>
    <string name="denied">已拒绝</string>
    <string name="from_here_to">从这去</string>
    <string name="type">类型</string>
    <string name="walk">步行</string>
    <string name="bus">公交</string>
    <string name="car">自驾</string>
    <string name="search">查找</string>
    <string name="search_route_wrong">规划路线出错</string>
    <string name="upload">上报状况</string>
    <string name="map">地图</string>
    <string name="weather">天气</string>
    <string name="pot">渍水点</string>
    <string name="wet_point">渍水点</string>
    <string name="accuracy">精确度  </string>
    <string name="normal">普通</string>
    <string name="accurate">精确</string>
    <string name="detail">详情</string>
    <string name="location_wrong">定位失败</string>
    <string name="post_img">上传图片</string>
    <string name="post">上传</string>
    <string name="dot_detail">渍水详情</string>
    <string name="dot_detail_info">你能更准确的了解到你的城市的渍水详情</string>
    <string name="public_warn">公众预警</string>
    <string name="public_warn_info">会告诉你我们知晓的一切关于渍水的信息</string>
    <string name="contact">黄页</string>
    <string name="emergency">应急队伍</string>
    <string name="public_report">公众上报</string>
    <string name="travel">旅游指导</string>
    <string name="note">出行小计</string>
    <string name="gift">积分兑换</string>
    <string name="test_notification">预警系数： 8</string>
</resources>
