<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        custom:auto_cycle="true"
        custom:indicator_visibility="visible"
        custom:pager_animation_span="1100"
        android:layout_height="200dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_spacing"
        custom:cardCornerRadius="@dimen/card_corner_radius"
        custom:cardElevation="@dimen/card_elevation">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.lvqingyang.floodsdetectassistant_android_new.view.DiscoverView
            android:id="@+id/dv_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_item"
            custom:icon="@mipmap/upload"
            custom:name="@string/upload"/>
        <com.lvqingyang.floodsdetectassistant_android_new.view.DiscoverView
            android:id="@+id/dv_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:icon="@mipmap/map"
            android:background="@drawable/bg_item"
            custom:name="@string/map"/>
        <com.lvqingyang.floodsdetectassistant_android_new.view.DiscoverView
            android:id="@+id/dv_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_item"
            custom:icon="@mipmap/weather"
            custom:name="@string/weather"/>
        <com.lvqingyang.floodsdetectassistant_android_new.view.DiscoverView
            android:id="@+id/dv_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_item"
            custom:icon="@mipmap/dot"
            custom:name="@string/pot"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_wet_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>