<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_nav_size"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="197dp"
                android:paddingTop="@dimen/status_height"
                android:background="@mipmap/foto_head_bg">
                <android.support.v7.widget.Toolbar
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:windowActionBarOverlay="true">
                </android.support.v7.widget.Toolbar>
                <RelativeLayout
                    android:id="@+id/rl_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/big_spacing"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_head"
                        android:layout_width="@dimen/head_size"
                        android:layout_height="@dimen/head_size"
                        app:civ_border_width="2dp"
                        android:src="@drawable/head_default"
                        app:civ_border_color="@color/border"/>

                    <LinearLayout
                        android:layout_toRightOf="@id/civ_head"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/medium_spacing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/medium_text"
                            android:textStyle="bold"
                            android:textColor="@color/accent_white"
                            android:text="@string/username_default"/>
                        <TextView
                            android:id="@+id/tv_position"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sub_medium_text"
                            android:textColor="@color/accent_white"
                            android:text="13260520354"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="@dimen/arrow_size"
                        android:layout_height="@dimen/arrow_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_edit"/>
                </RelativeLayout>
            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/card_elevation"
                android:layout_marginBottom="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/medium_spacing">
                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_my_work"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text"
                            android:text="@string/my_work"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textStyle="bold"
                            android:textSize="@dimen/medium_text"
                            android:text="2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/medium_spacing">
                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_report"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text"
                            android:text="@string/my_report"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textStyle="bold"
                            android:textSize="@dimen/medium_text"
                            android:text="11"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/medium_spacing">
                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_award"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text"
                            android:text="@string/my_award"/>
                        <TextView
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textStyle="bold"
                            android:textSize="@dimen/medium_text"
                            android:text="1"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_marginBottom="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <frame.view.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/message"
                        app:icon="@drawable/ic_message"/>
                    <frame.view.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/service"
                        app:icon="@drawable/ic_service"/>
                    <frame.view.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/feedback"
                        app:icon="@drawable/ic_feedback"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_marginBottom="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <frame.view.CardItem
                        android:id="@+id/ci_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_update"
                        app:name="@string/check_update"
                        app:showHint="true"
                        />

                    <frame.view.CardItem
                        android:id="@+id/ci_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_thumb_up"
                        app:name="@string/score"/>


                    <frame.view.CardItem
                        android:id="@+id/si_share_friend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_share_firend"
                        app:name="@string/share_firend"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>